Ajuste para configuração

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ FRONTEND_URL=http://localhost:3001
 DATABASE_URL=postgresql://neondb_owner:npg_nQCUWBRK8t5a@ep-damp-base-acu31a3d-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
 # Detailed PostgreSQL Configuration
-DB_TYPE=postgres
+DB_TYPE=postgresql
 DB_HOST=ep-damp-base-acu31a3d-pooler.sa-east-1.aws.neon.tech
 DB_PORT=5432
 DB_USERNAME=neondb_owner
@@ -34,6 +34,7 @@ DB_LOGGING=false
 DB_MAX_CONNECTIONS=10
 DB_CONNECTION_TIMEOUT=30000
 
+# DATABASE_URL='postgresql://neondb_owner:npg_nQCUWBRK8t5a@ep-damp-base-acu31a3d-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
 # =============================================================================
 # 3. JWT AUTHENTICATION
 # =============================================================================
